--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,16 +1,16 @@
-name: "TriliumNext Notes"
-version: "v2025.03.12"
-slug: "trilium_next"
+name: TriliumNext Notes
+version: v2025.03.12
+slug: trilium_next
 description: >-
   Hierarchical note-taking application with encryption,
   Markdown support, and personal knowledge base features
-url: "https://github.com/triliumnext/trilium"
+url: https://github.com/triliumnext/trilium
 
 ingress: true
 ingress_port: 8080
 ingress_stream: true
-panel_icon: "mdi:notebook-multiple"
-panel_title: "Trilium Notes"
+panel_icon: mdi:notebook-multiple
+panel_title: Trilium Notes
 webui: "http://[HOST]:[PORT:8080]/"
 
 arch:
@@ -26,7 +26,6 @@ map:
     read_only: false
     path: /home/node/trilium-data
 
-# ▶ Default values for your add-on’s options
 options:
   NO_AUTHENTICATION: true
   TRILIUM_OAUTH_BASE_URL: ""
@@ -34,11 +33,10 @@ options:
   TRILIUM_OAUTH_CLIENT_SECRET: ""
   TRILIUM_OAUTH_ISSUER_BASE_URL: ""
   TRILIUM_OAUTH_ISSUER_NAME: ""
-  timezone: "Europe/London"
-  log_level: "info"
+  timezone: Europe/London
+  log_level: info
   https_only: false
 
-# ▶ JSON-schema for HA’s config UI
 schema:
   NO_AUTHENTICATION:
     type: boolean
@@ -83,17 +81,15 @@ schema:
   https_only:
     type: boolean
 
-# Exposed port (not strictly needed with ingress, but harmless)
 expose:
-  - 8080/tcp
+  "8080/tcp": {}
 
 ports_description:
-  "8080/tcp": "Web interface"
+  "8080/tcp": Web interface
 
-# Environment for the container
 environment:
   TRILIUM_DATA_DIR: "/home/node/trilium-data"
   TZ: "{{ options.timezone }}"
-  NODE_ENV: "production"
+  NODE_ENV: production
   HOST: "0.0.0.0"
   TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
