--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,95 +1,50 @@
-name: TriliumNext Notes
-version: v2025.03.12
-slug: trilium_next
-description: >-
-  Hierarchical note-taking application with encryption,
-  Markdown support, and personal knowledge base features
-url: https://github.com/triliumnext/trilium
-
-ingress: true
-ingress_port: 8080
-ingress_stream: true
-panel_icon: mdi:notebook-multiple
-panel_title: Trilium Notes
-webui: "http://[HOST]:[PORT:8080]/"
-
-arch:
-  - amd64
-  - aarch64
-
-startup: application
-boot: auto
-init: false
-
-map:
-  - type: data
-    read_only: false
-    path: /home/node/trilium-data
-
-options:
-  NO_AUTHENTICATION: true
-  TRILIUM_OAUTH_BASE_URL: ""
-  TRILIUM_OAUTH_CLIENT_ID: ""
-  TRILIUM_OAUTH_CLIENT_SECRET: ""
-  TRILIUM_OAUTH_ISSUER_BASE_URL: ""
-  TRILIUM_OAUTH_ISSUER_NAME: ""
-  timezone: Europe/London
-  log_level: info
-  https_only: false
-
-schema:
-  NO_AUTHENTICATION:
-    type: boolean
-
-  TRILIUM_OAUTH_BASE_URL:
-    type: string
-
-  TRILIUM_OAUTH_CLIENT_ID:
-    type: string
-
-  TRILIUM_OAUTH_CLIENT_SECRET:
-    type: string
-
-  TRILIUM_OAUTH_ISSUER_BASE_URL:
-    type: string
-
-  TRILIUM_OAUTH_ISSUER_NAME:
-    type: string
-
-  timezone:
-    type: select
-    options:
-      - Europe/Berlin
-      - America/New_York
-      - UTC
-      - Asia/Berlin
-      - Europe/London
-      - Asia/Tokyo
-      - Australia/Sydney
-
-  log_level:
-    type: select
-    options:
-      - trace
-      - debug
-      - info
-      - notice
-      - warning
-      - error
-      - fatal
-
-  https_only:
-    type: boolean
-
-expose:
-  "8080/tcp": {}
-
-ports_description:
-  "8080/tcp": Web interface
-
-environment:
-  TRILIUM_DATA_DIR: "/home/node/trilium-data"
-  TZ: "{{ options.timezone }}"
-  NODE_ENV: production
-  HOST: "0.0.0.0"
-  TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
+{
+  "arch": [
+    "amd64",
+    "aarch64",
+    "armhf",
+    "armv7",
+    "i386"
+  ],
+  "boot": "auto",
+  "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
+  "environment": {
+    "TRILIUM_DATA_DIR": "/config",
+    "NO_AUTHENTICATION": "true"
+  },
+  "name": "Trilium Next - JB",
+  "map": [
+    "addon_config:rw"
+  ],
+  "options": {
+    "NO_AUTHENTICATION": true,
+    "TRILIUM_OAUTH_BASE_URL": "",
+    "TRILIUM_OAUTH_CLIENT_ID": "",
+    "TRILIUM_OAUTH_CLIENT_SECRET": "",
+    "TRILIUM_OAUTH_ISSUER_BASE_URL": "",
+    "TRILIUM_OAUTH_ISSUER_NAME": ""
+  },
+  "expose": {
+    "8080/tcp": {}
+  },
+  "ports_description": {
+    "8080/tcp": "Web interface"
+  },
+  "schema": {
+    "NO_AUTHENTICATION": "bool",
+    "TRILIUM_OAUTH_BASE_URL": "str",
+    "TRILIUM_OAUTH_CLIENT_ID": "str",
+    "TRILIUM_OAUTH_CLIENT_SECRET": "str",
+    "TRILIUM_OAUTH_ISSUER_BASE_URL": "str",
+    "TRILIUM_OAUTH_ISSUER_NAME": "str"
+  },
+  "slug": "triliumnext",
+  "startup": "services",
+  "upstream": "v0.95.0",
+  "url": "https://github.com/jeakob/homeassistant-addons",
+  "version": "v0.95.0",
+  "ingress": true,
+  "ingress_port": 8080,
+  "image": "triliumnext/notes",
+  "webui": "[PROTO:ssl]://[HOST]:[PORT:8080]"
+}
