--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,43 +1,115 @@
----
-name: "TriliumNext Notes"
+name: "Trilium Next - JB"
 version: "v2025.03.12"
-slug: trilium_next
-description: "Hierarchical note-taking application with encryption, Markdown support, and personal knowledge base features"
+slug: triliumnext
+description: >-
+  TriliumNext Notes is a hierarchical note taking application with focus on
+  building large personal knowledge bases.  It also supports encryption,
+  Markdown, and other PKB features.
 url: "https://github.com/triliumnext/trilium"
+
+# Ingress settings
 ingress: true
-ingress_port: 8080
 ingress_stream: true
-panel_icon: mdi:notebook-multiple
-panel_title: Trilium Notes
+ingress_port: 8080
 webui: "http://[HOST]:[PORT:8080]/"
+panel_icon: "mdi:notebook-multiple"
+panel_title: "Trilium Notes"
+
+# Supported architectures
 arch:
   - amd64
   - aarch64
+  - armhf
+  - armv7
+  - i386
+
+# Startup settings
 startup: application
 boot: auto
 init: false
+
+# File‐system mounts
+# - the built-in HA “addon_config” for reading your config.json/yaml
+# - Trilium’s data folder
 map:
+  - "addon_config:rw"
   - type: data
     read_only: false
     path: /home/node/trilium-data
-ports:
-  "8080/tcp": 8080
+
+# Exposed ports (HA ingress handles most traffic)
+expose:
+  "8080/tcp": {}
+
+ports_description:
+  "8080/tcp": "Web interface"
+
+# Default values for user-configurable options
 options:
-# language: en
+  NO_AUTHENTICATION: true
+  TRILIUM_OAUTH_BASE_URL: ""
+  TRILIUM_OAUTH_CLIENT_ID: ""
+  TRILIUM_OAUTH_CLIENT_SECRET: ""
+  TRILIUM_OAUTH_ISSUER_BASE_URL: ""
+  TRILIUM_OAUTH_ISSUER_NAME: ""
   timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
+
+# JSON-schema for the HA add-on config UI
 schema:
-#  language: |
-#    list(ar|br|ca|cs|de|en|eo|es|fa|fr|hi|it|ja|ko|kz|nl|pl|pt|ru|sv|tl|tr|uk|uz|vi|zh)
-  timezone: |
-    list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
-  log_level: "list(trace|debug|info|notice|warning|error|fatal)"
-  https_only: "bool"
+  NO_AUTHENTICATION:
+    type: boolean
+
+  TRILIUM_OAUTH_BASE_URL:
+    type: string
+
+  TRILIUM_OAUTH_CLIENT_ID:
+    type: string
+
+  TRILIUM_OAUTH_CLIENT_SECRET:
+    type: string
+
+  TRILIUM_OAUTH_ISSUER_BASE_URL:
+    type: string
+
+  TRILIUM_OAUTH_ISSUER_NAME:
+    type: string
+
+  timezone:
+    type: select
+    options:
+      - Europe/Berlin
+      - America/New_York
+      - UTC
+      - Asia/Berlin
+      - Europe/London
+      - Asia/Tokyo
+      - Australia/Sydney
+
+  log_level:
+    type: select
+    options:
+      - trace
+      - debug
+      - info
+      - notice
+      - warning
+      - error
+      - fatal
+
+  https_only:
+    type: boolean
+
+# Container‐level environment variables
 environment:
   TRILIUM_DATA_DIR: "/home/node/trilium-data"
+  NO_AUTHENTICATION: "{{ options.NO_AUTHENTICATION }}"
   TZ: "{{ options.timezone }}"
-  NODE_ENV: "production" 
+  NODE_ENV: "production"
   HOST: "0.0.0.0"
   TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
-#  TRILIUM_LANGUAGE: "{{ options.language }}"
+
+# If you’re pulling from an upstream Docker Hub image:
+image: "triliumnext/notes:v2025.03.12"
+upstream: "v2025.03.12"
